[package]
name = "mini_magnets"
version = "0.1.0"
authors = ["Willi Kappler, grandor@gmx.de"]
license = "GPL v3"
description = "Puzzle game"
readme = "README.md"
repository = "https://github.com/willi-kappler/mini_magnets"
keywords = ["puzzle", "game", "magnet"]


[dependencies]
piston_window = "0.56.0"
#quick-error = "1.1"

#[profile.release]
#lto = true
