[package]
name = "mini_magnets"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "GPL V3"
repository = "https://github.com/willi-kappler/mini_magnets"
description = "Puzzle game"
readme = "README.md"
exclude = ["target"]
keywords = ["Puzzle", "Game"]
categories = ["Game"]
edition = "2018"

[dependencies.sdl2]
    version = "0.32"
    default-features = false
    features = ["ttf", "image", "gfx", "mixer"]

[profile.release]
lto = true
